solve alignment issue

--- a/recipe-page-main/style.css
+++ b/recipe-page-main/style.css
@@ -60,5 +60,9 @@ span{
 }
 
 .table-item{
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+
